@@ -8,26 +8,61 @@
 
 package org.opensearch.example.stream;
 
+import org.apache.arrow.memory.BufferAllocator;
 import org.opensearch.action.ActionRequest;
+import org.opensearch.arrow.flight.transport.ArrowAllocatorProvider;
+import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
+import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.core.action.ActionResponse;
+import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
+import org.opensearch.core.xcontent.NamedXContentRegistry;
+import org.opensearch.env.Environment;
+import org.opensearch.env.NodeEnvironment;
 import org.opensearch.plugins.ActionPlugin;
 import org.opensearch.plugins.Plugin;
+import org.opensearch.repositories.RepositoriesService;
+import org.opensearch.script.ScriptService;
+import org.opensearch.threadpool.ThreadPool;
+import org.opensearch.transport.client.Client;
+import org.opensearch.watcher.ResourceWatcherService;
 
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
+import java.util.function.Supplier;
 
-/**
- * Example plugin demonstrating streaming transport actions
- */
 public class StreamTransportExamplePlugin extends Plugin implements ActionPlugin {
 
-    /**
-     * Constructor
-     */
+    private final BufferAllocator allocator = ArrowAllocatorProvider.newChildAllocator("stream-transport-example", Long.MAX_VALUE);
+
     public StreamTransportExamplePlugin() {}
 
     @Override
+    public Collection<Object> createComponents(
+        Client client,
+        ClusterService clusterService,
+        ThreadPool threadPool,
+        ResourceWatcherService resourceWatcherService,
+        ScriptService scriptService,
+        NamedXContentRegistry xContentRegistry,
+        Environment environment,
+        NodeEnvironment nodeEnvironment,
+        NamedWriteableRegistry namedWriteableRegistry,
+        IndexNameExpressionResolver indexNameExpressionResolver,
+        Supplier<RepositoriesService> repositoriesServiceSupplier
+    ) {
+        return List.of(new ExampleAllocator(allocator));
+    }
+
+    @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        return Collections.singletonList(new ActionHandler<>(StreamDataAction.INSTANCE, TransportStreamDataAction.class));
+        return List.of(
+            new ActionHandler<>(StreamDataAction.INSTANCE, TransportStreamDataAction.class),
+            new ActionHandler<>(NativeArrowStreamDataAction.INSTANCE, TransportNativeArrowStreamDataAction.class)
+        );
+    }
+
+    @Override
+    public void close() {
+        allocator.close();
     }
 }
